# tauri-test-v2

./: old-releasel.yaml  package.json  vite.config.ts
.github/workflows/: release.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src/routes/: +layout.ts
